fix #962 make modals full-height on mobile

--- a/web/src/components/modal/modal.css
+++ b/web/src/components/modal/modal.css
@@ -31,6 +31,7 @@
     padding: 2rem;
     width: 100%;
     max-width: 40rem;
+    min-height: 99vh;
     text-align: center;
     background: var(--white);
     pointer-events: all;
